[package]
name = "scx_aura"
version = "1.1.1"
authors = ["Andrea Righi <andrea.righi@linux.dev>"]
edition = "2021"
description = "Adaptive Utilisation Responsive Architecture — a laptop-optimised sched_ext scheduler with three-tier scheduling, group interactivity scoring, adaptive time-slice feedback, and E-core idle consolidation."
license = "GPL-2.0-only"

[dependencies]
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
crossbeam = "0.8"
libbpf-rs = "=0.26.2"
log = "0.4"
scx_stats = "1.1.1"
scx_stats_derive = "1.1.1"
scx_utils = { version = "1.1.1", features = ["autopower"] }
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"

[build-dependencies]
scx_cargo = "1.1.1"

[features]
enable_backtrace = []
